fix: remove overflow-scrolling

--- a/src/composables/useDialog/style.css
+++ b/src/composables/useDialog/style.css
@@ -30,7 +30,7 @@
   justify-content: center;
   flex-direction: column;
   pointer-events: auto;
-  -webkit-overflow-scrolling: touch;
+  /* -webkit-overflow-scrolling: touch; */
 }
 
 .revfanc-dialog-content--center {
